# COMP4901B-Project

./: .env-sample  .gitignore  README.md  eval.py  grade_with_em.py  grade_with_llm_judge.py  main.py  pyproject.toml  requirements.txt
data/: nq_test_100.jsonl
results/: prediction_example.jsonl  trajectories_example.jsonl
results/johnny/coordinator/: coordinator_trajectories copy.jsonl  coordinator_trajectories.jsonl  coordinator_trajectories_1.jsonl  task1_output.txt
results/johnny/search/: agent_trajectories.jsonl  predictions_search.jsonl  results_search_llm_judge.json
results/part1/search/: predictions_search.jsonl
results/part2/coordinator/: coordinator_trajectories_task1.jsonl  task3_output.txt
results/tim/browse/: results_browse_em.json  results_browse_llm_judge.json
results/tim/nosearch/: prediction_nosearch.jsonl  predictions_nosearch.jsonl  results_nosearch_em.json  results_nosearch_llm_judge.json  trajectories_nosearch.jsonl
results/tim/search/: results_search_em.json
results/tim/sheet/: shopping.json  stock.json  travel.json
results_backup/johnny/coordinator/: coordinator_trajectories_task2.jsonl  coordinator_trajectories_task3.jsonl  task2_output.txt
results_backup/johnny/nosearch/: predictions_nosearch.jsonl  results_nosearch_em.json  results_nosearch_llm_judge.json
src/: metrics.py
src/johnny/: agent.py  evaluate.py  prompt.py  tools.py
src/part1/: agent.py  evaluate.py
src/part2/: agent.py  run_agent.py
src/tim/: agent.py  evaluate.py  schema.py  test.ipynb  tools.py
src_backup/tim/: evaluate.py  prompts.py  test.ipynb
(+18 files in other folders)
