[project]
name = "comp4901b-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=2.14.0",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.187.0",
    "googlemaps>=4.10.0",
    "huggingface-hub>=0.19.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "openai>=1.0.0",
    "requests>=2.28.0",
    "tqdm>=4.65.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
]
